--- a/styles.css
+++ b/styles.css
@@ -1,86 +1,189 @@
 @import "https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap";
 
+:root {
+  --color-green: #50fa7b;
+  --color-rocket: #7159c1;
+}
+
 * {
   margin: 0;
   padding: 0;
   border: 0 ;
 }
+
 body {
   background: #282a36;
   font-family: 'Roboto', sans-serif;
   color: #fff;
 }
+
 header {
   padding: 30px;
-  border: 1px solid #333;
+  border-bottom: 1px solid #333;
   background: rgba(0, 0, 0, 0.2);
 }
-header div {
+
+.links {
   text-align: center;
 }
+
 .links a {
   font-size: 18px;
   line-height: 28px;
   margin: 0 30px;
   text-decoration: none;
   color: #fff;
+  padding-bottom: 3px;
 
 }
 .links a:hover {
-  color: #50fa7b;
+  color: var(--color-green);
   transition: color 200ms;
 }
 
-#sobre {
+#wrapper {
   text-align: center;
+  padding: 32px;
 }
 
-#sobre img {
+#wrapper img {
   border-radius: 50%;
   margin-top: 32px;
-  border: #50fa7b solid 3px;
+  border: var(--color-green) solid 3px;
 }
 
-#sobre h1 {
+#wrapper h1 {
   font-weight: bold;
-  font-size: 24px;
-  margin-top: 10px;
+  font-size: 42px;
+  line-height: 52px;
 }
 
-#sobre p {
+#wrapper p {
   font-size: 20px;
   font-weight: normal ;
   max-width: 500px;
   margin: 0 auto;
   text-align: justify;
-  margin-top: 40px;
+  margin-top: 20px;
   line-height: 34px;
 }
 
-#sobre h2 {
+#wrapper h2 {
   font-size: 20px;
   font-weight: normal;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
-#sobre ul {
+#wrapper ul {
   list-style: none;
 }
 
-#sobre ul li {
+#wrapper ul li {
   font-size: 20px;
 }
 
-#sobre .links {
-  position: absolute;
-  bottom: 20px;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
+#wrapper .links {
+  margin-top: 20px;
 }
 
-#sobre .links a {
+#wrapper .links a {
   text-decoration: none;
-  border-bottom: #50fa7b 1px solid;
+  border-bottom: var(--color-green) 1px solid;
 }
 
+/* === CARDS === */
+
+.cards {
+  max-width: 1000px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 20px;
+  padding: 10px;
+}
+
+.starter .card__content h2 {
+  color: var(--color-rocket);
+  opacity: 0.8;
+}
+
+.launchbase .card__content h2 {
+  color: #fd951f;
+  opacity: 0.8;
+}
+
+.gostack .card__content h2 {
+  color: #04d361;
+  opacity: 0.8;
+}
+
+.card {
+  text-align: center;
+  background-color: #33336649;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.card__image-container {
+  padding: 50px; 
+} 
+
+.card__content,
+.card__info {
+  padding: 24px;
+}
+
+.card__info {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.card__price {
+  background-color: #333366;
+  filter: brightness(90%);
+  padding: 5px 20px;
+  border-radius: 20px;
+  text-align: center;
+}
+
+/* === MODAL === */
+
+.modal-overlay {
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal {
+  width: 90%;
+  height: 90%;
+  background-color: #fff;
+  margin: 5vh auto;
+  position: relative;
+}
+
+.modal .close-modal {
+  color: black;
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  cursor: pointer;
+}
+
+/* === MODAL.ACTIVE === */
+
+.modal-overlay.active {
+  opacity: 1;
+  visibility: visible; 
+}
+
+iframe {
+  width: 100%;
+  height: 90%;
+  position: absolute;
+  top: 5%;
+}
